--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2 class="command">!soul<span class="needreg">要登録</span></h2>
         <p>自分のフェアリーソウルの進捗を表示します</p>
         <h2 class="command">!sbhelp</h2>
-        <p>ヘルプを表示します"</p>
+        <p>ヘルプを表示します</p>
     </main>
 </body>
 
