--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <h1>しおんのコマンド一覧</h1>
             </div>
         </div>
+        <div class="notification">
+            <h1><a href="notification.html">重要】サービス終了のお知らせ</a></h1>
+        </div>
         <div id="desc">
             <p>一般ユーザーが利用可能な各種コマンド一覧です(一部掲載されていないコマンドがあります)</p>
             <p><span class="needreg">要登録</span> は!addコマンド(以下参照)による利用登録が必要なコマンドです</p>
